--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,29 @@
   background-color: green;
   color: white
 }
+.t1{
+  border-color: black;
+  border: 1px solid black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+th{
+  border: 1px solid yellow;
+}
+h3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* tr:nth-child(even) {
+  background-color: #f2f2f2;
+} */
+.h1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .App-logo {
   height: 40vmin;
